# python-sdp

./: main.py  models.py  pyproject.toml  readme.md
commands/: inventory.py  user.py
services/: inventory.py  user.py
